# polymarket-sniper-rs

./: .env.example  .gitignore  Cargo.toml  README.md  start.sh
.cargo/: config.toml
aws/: README.md  cloudformation.yaml  deploy.sh
benches/: latency.rs
dashboard/: app.js  index.html
examples/: check_address.rs  check_onchain_balance.rs  check_poly_balance.rs  check_predictive_mapping.rs  check_wallet_balances.rs  clob_test.rs  derive_api_key.rs  test_executor.rs  test_order_sdk.rs  test_ws_connection.rs  update_balance.rs  verify_proxy_derivation.rs
src/: config.rs  lib.rs  main.rs  pricefeed.rs  sniper.rs
src/analytics/: api.rs  mod.rs  pnl.rs
src/execution/: cpu_affinity.rs  executor.rs  flashbots.rs  mod.rs  redemption.rs
src/polymarket/: api.rs  client.rs  contracts.rs  events.rs  lockfree_queue.rs  mempool.rs  mod.rs  orderbook.rs  types.rs  ws.rs
src/simulation/: mod.rs
src/strategies/: arbitrage.rs  arena.rs  expiration.rs  mod.rs  position_sizing.rs  predictive.rs  risk.rs  types.rs
tests/: core_tests.rs
