[package]
name = "polymarket-hft-agent"
version = "0.1.0"
edition = "2021"


[profile.release]
lto = "thin"
codegen-units = 16
panic = "abort"
strip = true
opt-level = 3



[[bench]]
name = "latency"
harness = false

[dependencies]

# Polymarket client
polyfill-rs = "0.2.3"

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client for OpenRouter
reqwest = { version = "0.11", features = ["json"] }

# WebSocket
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
futures-util = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Environment variables
dotenvy = "0.15"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Configuration
config = "0.14"
ethers = { version = "2.0.14", features = ["ws", "abigen"] }
rust_decimal = "1.40.0"
hex = "0.4"
async-trait = "0.1.89"
rand = "0.9.2"
mimalloc = "0.1.48"
dashmap = "6.1.0"
ethers-flashbots = "0.15.0"
url = "2.5.8"
ruint = "1.17.2"
alloy-primitives = "1.5.2"
bumpalo = "3.14"  # Memory arena allocator
core_affinity = "0.8"  # CPU pinning
crossbeam = "0.8"  # Lock-free data structures

# Dashboard API server removed
# axum = "0.8"
# tower-http = { version = "0.6", features = ["cors", "fs"] }

[dev-dependencies]
criterion = "0.8.1"
mockito = "1.0"
